--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ theme: jekyll-theme-cayman
 name: BIOS
 
 description: real evil genius.
+everyone who is interested in computer science can have a look ,thanks for supporting!
