--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 
-name: BIOS
+name: HACKER
 
 description: real evil genius.
-everyone who is interested in computer science can have a look ,thanks for supporting!
+
